# perihelion

./: .gitignore  compose.yaml
user-service/: .gitignore  Cargo.toml
user-service/migrations/: 20230731004626_users.down.sql  20230731004626_users.up.sql
user-service/src/: config.rs  error.rs  health.rs  jwt.rs  login_check.rs  main.rs  test_utils.rs  v1.rs
user-service/src/dto/: login.rs  mod.rs  user.rs
user-service/src/fixtures/: already-exists-user.sql  test_correct_jwt.txt
user-service/src/fixtures/jwt/: test_bad_algorithm.txt  test_bad_issuer.txt  test_correct_jwt.txt
user-service/src/models/: user.rs
user-service/src/routes/v1/: login.rs  logout.rs  mod.rs  refresh.rs  signup.rs  user_info.rs
user-service/src/routes/v1/services/: blacklist.rs  mod.rs
user-service/test/: private.pem  public.pem
