[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.26", features = ["serde"] }
lazy_static = "1.4.0"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.176", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["time", "uuid", "postgres", "runtime-tokio"] }
time = { version = "0.3.23", features = ["serde-human-readable"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
rsa = "0.9.2"
rand = "0.8.5"
derive_more = "0.99.17"
reqwest = "0.11.18"
figment = { version = "0.10.10", features = ["env", "toml"] }
dotenvy = "0.15.7"
eyre = "0.6.8"
color-eyre = "0.5"

tracing = "0.1.19"
opentelemetry = { version = "0.19", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.19" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = { version = "0.7.5", features = ["opentelemetry_0_19"] }
