[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"

# Web utils
jsonwebtoken = "8.3.0"
rsa = "0.9.2"
serde = { version = "1.0.176", features = ["derive"] }
reqwest = "0.11.18"

# Database
sqlx = { version = "0.7.1", features = ["time", "uuid", "postgres", "runtime-tokio"] }
time = { version = "0.3.23", features = ["serde-human-readable"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Config
rand = "0.8.5"
figment = { version = "0.10.10", features = ["env", "toml"] }
dotenvy = "0.15.7"

# Error handling
eyre = "0.6.8"
color-eyre = "0.5"

# Tracing
tracing = "0.1.19"
opentelemetry = { version = "0.19", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.19" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = { version = "0.7.5", features = ["opentelemetry_0_19"] }

# Misc
derive_more = "0.99.17"

