[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = "1.32.0"

# Web framework
actix-web = "4"

# Web utils
jsonwebtoken = "8.3.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
reqwest = "0.11.18"
validator = {version = "0.15", features = ["derive"]}

# Password hashing
argon2 = "0.5.1"

# Database
sqlx = { version = "0.7.1", features = ["time", "uuid", "postgres", "runtime-tokio"] }
time = { version = "0.3.23", features = ["serde-human-readable"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Redis
redis = "0.23.2"

# Config
figment = { version = "0.10.10", features = ["env", "toml"] }
dotenvy = "0.15.7"

# Error handling
eyre = "0.6.8"
color-eyre = "0.5"

# Tracing
tracing = "0.1.19"
opentelemetry = { version = "0.19", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.19" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = { version = "0.7.5", features = ["opentelemetry_0_19"] }

# Misc
derive_more = "0.99.17"
lazy_static = "1.4.0"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
async-trait = "0.1.73"

# Testing
mockall = "0.11.4"
